generate certificate feature added

--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 #CONFIG for the certificate automatic generation
-name = Ettore Ciprian
-startDate = 
-endDate = 
-
+Name = Ettore Ciprian
+StartDate = 16/06/2015
+EndDate = 
+Subject = Cryptox509
