generate certificate feature added

--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 #CONFIG for the certificate automatic generation
 Name = Ettore Ciprian
+#Must be dd/MM/yyyy
 StartDate = 16/06/2015
-EndDate = 
-Subject = Cryptox509
+EndDate =
