verify option enabled

--- a/test/config.properties
+++ b/test/config.properties
@@ -1,5 +1,10 @@
 #CONFIG for the certificate automatic generation
-Name=Ettore Ciprian
-StartDate=07/06/2015
-EndDate= 
-Subject=Cryptox509
+#Every field must be on the same line, newline at the end
+
+#Issuer - the issuer of the certificate, can include specific fields separated by a comma (Country, State, Locality, Organization, Organization Unit, Common Name)
+#StartDate - start date (dd/MM/yyyy) of the certificate validity. Can be left blank, in this case the default value is the current system date.
+#EnDate - end date (dd/MM/yyyy) of validity. Can be left blank, default value is one year after startDate.
+
+Issuer = C=ZA, ST=Western Cape, L=Cape Town, O=Thawte Consulting cc, OU=Certification Services Division, CN=Thawte Server server-certs@thawte.com
+StartDate = 16/06/2015
+EndDate =
